RussoComputin/Computin.java
/* Computin.java */
/* Generated By:JavaCC: Do not edit this line. Computin.java */
package RussoComputin;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Paths;
import javax.swing.*;
import javax.swing.text.*;
import java.awt.*;
import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;
import java.io.StringReader;
import javax.swing.event.DocumentEvent;
import javax.swing.event.DocumentListener;
import java.util.List;
import java.util.ArrayList;
import java.util.Set;
import java.util.HashSet;
import java.util.Arrays;


public class Computin implements ComputinConstants {

    private List<Token> errorTokens = new ArrayList<>();
    private List<int[][]> expectedTokenSequencesVal = new ArrayList<>();
    private List<String[]> tokenImageVal = new ArrayList<>();
    private boolean errorHapenned = false;

    // Getter para errorTokens
    public List<Token> getErrorTokens() {
        return errorTokens;
    }

    // Setter para errorTokens
    public void setErrorTokens(List<Token> errorTokens) {
        this.errorTokens.addAll(errorTokens); // Adiciona aos tokens de erro
    }

    // Getter para errorHapenned
    public boolean isErrorHapenned() {
        return errorHapenned;
    }

    // Setter para errorHapenned
    public void setErrorHapenned(boolean errorHapenned) {
        this.errorHapenned = errorHapenned;
    }

    // Getter para expectedTokenSequencesVal
    public List<int[][]> getExpectedTokenSequencesVal() {
        return expectedTokenSequencesVal;
    }

    // Setter para expectedTokenSequencesVal
    public void addExpectedTokenSequences(List<int[][]> expectedTokenSequences) {
        this.expectedTokenSequencesVal.addAll(expectedTokenSequences);
    }

    // Getter para tokenImageVal
    public List<String[]> getTokenImageVal() {
        return tokenImageVal;
    }

    // Setter para tokenImageVal
    public void addTokenImage(List<String[]> tokenImage) {
        this.tokenImageVal.addAll(tokenImage);
    }

  public static void main(String[] args) throws ParseException, IOException {
    if (args.length == 0) {
      SwingUtilities.invokeLater(new Runnable() {
        @Override
        public void run() {
          new ComputinGUI().setVisible(true);
        }
      });
    } else {
      String input = new String(Files.readAllBytes(Paths.get(args[0])));
      Computin parser = new Computin(new java.io.StringReader(input));
      try {
        parser.start();
        System.out.println("\nComunismo gostou disso camarada!");
      } catch (ParseException | TokenMgrError e) {
        System.err.println("\nErro: " + e.getMessage());
      }
    }
  }

  final public void start() throws ParseException {
    jj_consume_token(MAIN);
    jj_consume_token(ABREPAREN);
    jj_consume_token(FECHAPAREN);
    jj_consume_token(ABRECHAVE);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:
      case IF:
      case WHILE:
      case FOR:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracao();
    }
    jj_consume_token(FECHACHAVE);
}

  final public void declaracao() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:{
        declaraVariavel();
        break;
        }
      case IF:{
        testeCondicao();
        break;
        }
      case WHILE:{
        lacoWhile();
        break;
        }
      case FOR:{
        lacoFor();
        break;
        }
      case ID:{
        atribuicao();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
List<Token> errorTokens = new ArrayList<>();
        List<int[][]> expectedTokenSequences = new ArrayList<>();
                List<String[]> tokenImages = new ArrayList<>();

        errorTokens.add(e.currentToken);
        expectedTokenSequences.add(e.expectedTokenSequences);
        tokenImages.add(e.tokenImage);

        Token t = e.currentToken;

        // Definindo o conjunto de tokens válidos para seguir após um erro (follow)
        Set<Integer> followSet = new HashSet<>(Arrays.asList(
            PONTOVIRGULA, VIRGULA, FECHAPAREN, FECHACHAVE, // Tokens de fechamento
            MAIN, TIPOINT, TIPOFLOAT, TIPOSTRING, IF, ELSE, WHILE, FOR, // Palavras reservadas
            MAIS, MENOS, MULT, DIVIS, IGUAL, NOT, MAIOR, MENOR, AND, OR, // Operadores
            ID // Identificadores
        ));

        // Ignora tokens do tipo SKIP (espaços, tabulações, quebras de linha)
        while (t.kind == ' ' || t.kind == '\t' || t.kind == '\n' || t.kind == '\r') {
            t = getNextToken();
        }

        // Avança até encontrar um token válido do follow set
        do {
            t = getNextToken();
        } while (!followSet.contains(t.kind));
        setErrorHapenned(true);
        setErrorTokens(errorTokens);
        addExpectedTokenSequences(expectedTokenSequences);
        addTokenImage(tokenImages);
    }
}

  final public void declaraVariavel() throws ParseException {
    tipoVariavel();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      inicializacao();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        inicializacao();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    }
    jj_consume_token(PONTOVIRGULA);
}

  final public void tipoVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOINT:{
      jj_consume_token(TIPOINT);
      break;
      }
    case TIPOFLOAT:{
      jj_consume_token(TIPOFLOAT);
      break;
      }
    case TIPOSTRING:{
      jj_consume_token(TIPOSTRING);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void inicializacao() throws ParseException {
    jj_consume_token(IGUAL);
    expressao();
}

  final public void expCondicionalUnica() throws ParseException {
    termo();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      jj_consume_token(IGUAL);
      break;
      }
    case MENOR:{
      jj_consume_token(MENOR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        jj_consume_token(IGUAL);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
      }
    case MAIOR:{
      jj_consume_token(MAIOR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        jj_consume_token(IGUAL);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    termo();
}

// Estrutura condiciona do if
  final public void expCondicional() throws ParseException {
    expCondicionalUnica();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        jj_consume_token(AND);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      expCondicionalUnica();
    }
}

  final public void atribuicao() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(IGUAL);
    expressao();
    jj_consume_token(PONTOVIRGULA);
}

  final public void expressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:
    case EXPRESSAO_INT:
    case EXPRESSAO_FLOAT:
    case EXPRESSAO_STRING:{
      termo();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:
      case MENOS:
      case MULT:
      case DIVIS:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        jj_consume_token(MAIS);
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        break;
        }
      case MULT:{
        jj_consume_token(MULT);
        break;
        }
      case DIVIS:{
        jj_consume_token(DIVIS);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      termo();
    }
}

  final public void termo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXPRESSAO_INT:{
      jj_consume_token(EXPRESSAO_INT);
      break;
      }
    case EXPRESSAO_FLOAT:{
      jj_consume_token(EXPRESSAO_FLOAT);
      break;
      }
    case EXPRESSAO_STRING:{
      jj_consume_token(EXPRESSAO_STRING);
      break;
      }
    case ID:{
      jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void testeCondicao() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(ABREPAREN);
    expCondicional();
    jj_consume_token(FECHAPAREN);
    jj_consume_token(ABRECHAVE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:
      case IF:
      case WHILE:
      case FOR:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      declaracao();
    }
    jj_consume_token(FECHACHAVE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(ABRECHAVE);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIPOINT:
        case TIPOFLOAT:
        case TIPOSTRING:
        case IF:
        case WHILE:
        case FOR:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        declaracao();
      }
      jj_consume_token(FECHACHAVE);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
}

  final public void lacoWhile() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(ABREPAREN);
    expCondicional();
    jj_consume_token(FECHAPAREN);
    jj_consume_token(ABRECHAVE);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:
      case IF:
      case WHILE:
      case FOR:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      declaracao();
    }
    jj_consume_token(FECHACHAVE);
}

  final public void lacoFor() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(ABREPAREN);
    jj_consume_token(ID);
    jj_consume_token(IGUAL);
    jj_consume_token(EXPRESSAO_INT);
    jj_consume_token(PONTOVIRGULA);
    expCondicionalUnica();
    jj_consume_token(PONTOVIRGULA);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAIS:{
      jj_consume_token(MAIS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        jj_consume_token(MAIS);
        break;
        }
      case IGUAL:{
        jj_consume_token(IGUAL);
        jj_consume_token(EXPRESSAO_INT);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case MENOS:{
      jj_consume_token(MENOS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MENOS:{
        jj_consume_token(MENOS);
        break;
        }
      case IGUAL:{
        jj_consume_token(IGUAL);
        jj_consume_token(EXPRESSAO_INT);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(FECHAPAREN);
    jj_consume_token(ABRECHAVE);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOINT:
      case TIPOFLOAT:
      case TIPOSTRING:
      case IF:
      case WHILE:
      case FOR:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_8;
      }
      declaracao();
    }
    jj_consume_token(FECHACHAVE);
}

  /** Generated Token Manager. */
  public ComputinTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[23];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x40001bc0,0x40001bc0,0x20000,0x2000000,0x20000,0x1c0,0x20000,0x20000,0x9c0000,0x600000,0x600000,0xc0000000,0x1e000,0x1e000,0xc0000000,0x40001bc0,0x40001bc0,0x400,0x40001bc0,0x22000,0x24000,0x6000,0x40001bc0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x3,0x0,0x0,0x3,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public Computin(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Computin(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ComputinTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Computin(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ComputinTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ComputinTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Computin(ComputinTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ComputinTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
